add force off
